--- a/TP2Client/TP2Client.csproj
+++ b/TP2Client/TP2Client.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Views\FilmPage.xaml" />
+    <None Remove="Views\SearchPage.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -40,6 +41,11 @@
   -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
     <ProjectCapability Include="Msix" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\SearchPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Views\FilmPage.xaml">
